# push_swap

./: .gitignore  Makefile  README.md  a.out  traces.txt
.github/workflows/: c-cpp.yml
aux/: format.sh  input_maker_bin  test.sh
aux/input_maker/: Cargo.toml
aux/input_maker/src/: main.rs
lib/libft/src/extension/io/: ft_putstr.c
src/: main.c
src/array/: array_is_sorted.c  array_operations.h  array_sort.c  contains_duplicates.c  index_of.c
src/deque/: deque_append.c  deque_clear.c  deque_deep_copy.c  deque_find_max.c  deque_find_min.c  deque_is_sorted.c  deque_new.c  deque_peek.c  deque_pop.c  deque_push.c  deque_rotate.c  deque_size.c  deque_sort.c  list_new.c  t_int_deque.h
src/error/: die.c  error.h  error_repr.c  t_error.h
src/load/: checked_atoi.c  checked_atou.c  load.c  load.h  load_internals.h  load_raw_stack.c  load_stacks.c  load_stacks_from_string.c  load_stacks_from_strings.c  optionals.c  optionals.h  stacks_from_strings.c  t_opt_int.h
src/log/: log.c  log.h
src/optimization/: optimization.h  optimize.c
src/output/: output.h  output_operation_list.c
src/sort/: move_top_element.c  radix_sort.c  simplify.c  sort.c  sort.h  sort2.c  sort3.c  sort5.c  sort_internals.h
src/stack/: deque_clear.c  deque_new.c  deque_peak.c  deque_pop.c  deque_push.c  deque_rotate.c  deque_size.c  list_new.c  stack_push.c  stack_rotate.c  stack_rrotate.c  stack_swap.c  t_int_deque.h  t_stack.h  t_stacks.h
test/: CMakeLists.txt
test/src/: custom_assertions.cpp  custon_assertions.cpp  deque_test.cpp  stack_test.cpp  test.cpp
test/src/checked_atoi/: atoi_test.cpp
test/src/common/: custom_assertions.cpp  custom_assertions.h
test/src/deque/: deque_test.cpp
test/src/stack/: stack_test.cpp
